Fix alignment and sizes of recipe cards

--- a/TechnicalProgrammingProject/Content/asset/css/profile.css
+++ b/TechnicalProgrammingProject/Content/asset/css/profile.css
@@ -30,3 +30,6 @@
     pointer-events: none;
 }
 
+#status {
+    color: cadetblue;
+}
